--- a/css/css.css
+++ b/css/css.css
@@ -1,3 +1,9 @@
 .hero{
-    background-color: #FFF275;
+    aspect-ratio: 960/300;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    background-image: url('../svg/hero.svg');
 }
