--- a/css/css.css
+++ b/css/css.css
@@ -1,9 +1,24 @@
-.hero{
-    aspect-ratio: 960/300;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-
-    background-image: url('../svg/hero.svg');
+@charset "UTF-8";
+/* Import proměnných
+*/
+/*
+Moje paleta barev:
+*/
+.hero {
+  aspect-ratio: 960/300;
+  width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: url("../svg/hero.svg");
 }
+
+.jumbotron {
+  padding-top: 70px;
+  font-family: "VT323", monospace;
+}
+
+h1, h2, h3 {
+  font-family: "VT323", monospace;
+}/*# sourceMappingURL=css.css.map */
