--- a/css/css.scss
+++ b/css/css.scss
@@ -2,6 +2,7 @@
 */
 @import 'variables';
 
+
 .hero{
     aspect-ratio: 960/300;
     width: 100%;
@@ -22,4 +23,44 @@
 h1, h2, h3{
     font-family: 'VT323', monospace;
 }
+
+th, td {
+    padding: 3px;
+}
+
+.btn {
+    background-color: white;
+    border: none;
+    padding: 7px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 2px 1px;
+    cursor: pointer;
+  }
+  
+
+.btn-sub {
+    border: 3px solid $green;
+    transition-duration: 0.4s;
+}
+
+.btn-res {
+    border: 3px solid $pink;
+    transition-duration: 0.4s;
+  }
+  
+  .btn-sub:hover {
+    background-color: $green;
+  }
+
+  .btn-res:hover {
+    background-color: $pink;
+  }
+
+  .login {
+    border: solid 3px $pink;
+  }
+
 
