--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -3,7 +3,9 @@ Moje paleta barev:
 */
 
 $yellow: #FFE74C;
+$orange: #F26419;
 $pink: #FF5964;
 $white: #FFFFFF;
 $green: #6BF178;
 $blue: #35A7FF;
+$red: #F8333C;
