--- a/css/css.css
+++ b/css/css.css
@@ -19,8 +19,13 @@ Moje paleta barev:
   font-family: "VT323", monospace;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   font-family: "VT323", monospace;
+}
+
+p {
+  font-size: 17px;
+  text-align: justify;
 }
 
 th, td {
@@ -34,7 +39,7 @@ th, td {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 20px;
   margin: 2px 1px;
   cursor: pointer;
 }
@@ -42,11 +47,13 @@ th, td {
 .btn-sub {
   border: 3px solid #6BF178;
   transition-duration: 0.4s;
+  color: #6BF178;
 }
 
 .btn-res {
   border: 3px solid #FF5964;
   transition-duration: 0.4s;
+  color: #FF5964;
 }
 
 .btn-sub:hover {
@@ -57,6 +64,83 @@ th, td {
   background-color: #FF5964;
 }
 
+input {
+  padding: 0.2em;
+  box-sizing: border-box;
+  width: 100%;
+}
+
 .login {
-  border: solid 3px #FF5964;
+  border: solid 3px #F8333C;
+  padding: 5px;
+  font-family: "VT323", monospace;
+  border-radius: 10px;
+  box-shadow: 5px 0px 40px rgba(0, 0, 0, 0.5);
+  background-image: linear-gradient(#FF5964 25%, #FFE74C);
+}
+
+.user {
+  position: relative;
+}
+.user input {
+  width: 100%;
+  height: 50px;
+  border: 2px solid #FF5964;
+  border-radius: 40px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  outline: none;
+  transition-duration: 0.1s;
+}
+.user input::-moz-placeholder {
+  color: #FF5964;
+  padding: 0px 10px 0px 10px;
+  font-size: 20px;
+  background: transparent url(../icons/person.svg) no-repeat right 10px center;
+  background-size: 25px;
+}
+.user input::placeholder {
+  color: #FF5964;
+  padding: 0px 10px 0px 10px;
+  font-size: 20px;
+  background: transparent url(../icons/person.svg) no-repeat right 10px center;
+  background-size: 25px;
+}
+.user input:focus {
+  border: none;
+  color: #F8333C;
+  border: solid #F8333C;
+}
+
+.pass {
+  position: relative;
+}
+.pass input {
+  width: 100%;
+  height: 50px;
+  border: 2px solid #FF5964;
+  border-radius: 40px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  outline: none;
+  transition-duration: 0.1s;
+}
+.pass input::-moz-placeholder {
+  color: #FF5964;
+  padding: 0px 10px 0px 10px;
+  font-size: 20px;
+  background: transparent url(../icons/lock-fill.svg) no-repeat right 10px center;
+  background-size: 20px;
+}
+.pass input::placeholder {
+  color: #FF5964;
+  padding: 0px 10px 0px 10px;
+  font-size: 20px;
+  background: transparent url(../icons/lock-fill.svg) no-repeat right 10px center;
+  background-size: 20px;
+}
+.pass input:focus {
+  border: none;
+  color: #F8333C;
+  border: solid #F8333C;
 }/*# sourceMappingURL=css.css.map */
