--- a/css/css.css
+++ b/css/css.css
@@ -143,4 +143,21 @@ input {
   border: none;
   color: #F8333C;
   border: solid #F8333C;
+}
+
+.gray {
+  background-color: #F0F0F0;
+  margin-top: 50px;
+}
+
+.glyphicon-star {
+  background: -webkit-linear-gradient(#FF5964 25%, #FFE74C);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.glyphicon-star-empty {
+  background: -webkit-linear-gradient(black, black);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }/*# sourceMappingURL=css.css.map */
