--- a/css/css.scss
+++ b/css/css.scss
@@ -2,6 +2,9 @@
 */
 @import 'variables';
 
+html {
+  scroll-behavior: smooth;
+}
 
 .hero{
     aspect-ratio: 960/300;
@@ -64,80 +67,6 @@ th, td {
 
   .btn-res:hover {
     background-color: $pink;
-  }
-
-  input{
-    padding: 0.2em; 
-    box-sizing: border-box;
-    width: 100% 
-  }
-
-  .login{
-    border: solid 3px $red;
-    padding: 5px;
-    font-family: 'VT323', monospace;
-    border-radius: 10px;
-    box-shadow: 5px 0px 40px rgba(0,0,0, .5);
-    background-image: linear-gradient($pink 25% , $yellow);
-
-  }
-
-  .user {
-  position: relative;
-
-  input {
-    width: 100%;
-    height: 50px;
-    border: 2px solid $pink;
-    border-radius: 40px;
-    margin-bottom: 10px;
-    font-size: 20px;
-    outline: none;
-    transition-duration: 0.1s;
-
-    &::placeholder {
-      color: $pink;
-      padding: 0px 10px 0px 10px;
-      font-size: 20px;
-      background: transparent url(../icons/person.svg) no-repeat right 10px center;
-      background-size: 25px;
-    }
-  }
-
-  input:focus {
-    border: none;
-    color: $red;
-    border: solid $red;
-  }
-}
-
-  .pass {
-    position: relative;
-  
-    input {
-      width: 100%;
-      height: 50px;
-      border: 2px solid $pink;
-      border-radius: 40px;
-      margin-bottom: 10px;
-      font-size: 20px;
-      outline: none;
-      transition-duration: 0.1s;
-  
-      &::placeholder {
-        color: $pink;
-        padding: 0px 10px 0px 10px;
-        font-size: 20px;
-        background: transparent url(../icons/lock-fill.svg) no-repeat right 10px center;
-        background-size: 20px;
-      }
-    }
-
-    input:focus {
-      border: none;
-      color: $red;
-      border: solid $red;
-    }
   }
 
   .gray{
