--- a/css/css.css
+++ b/css/css.css
@@ -83,4 +83,56 @@ th, td {
   background: -webkit-linear-gradient(black, black);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.footer {
+  text-align: center;
+  padding: 3px;
+  color: black;
+  margin-top: 30px;
+  font-size: 10px !important;
+  aspect-ratio: 960/200;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: url("../svg/footer.svg");
+}
+@media screen and (max-width: 767px) {
+  .footer h3 {
+    font-size: 15px !important;
+  }
+}
+
+.vyhledat {
+  position: relative;
+}
+.vyhledat input {
+  width: 100%;
+  height: 50px;
+  border: 2px solid #FF5964;
+  border-radius: 40px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  outline: none;
+  transition-duration: 0.1s;
+}
+.vyhledat input::-moz-placeholder {
+  color: #FF5964;
+  padding: 0px 10px 0px 10px;
+  font-size: 20px;
+  background: transparent url(../icons/envelope-paper-heart.svg) no-repeat right 10px center;
+  background-size: 20px;
+}
+.vyhledat input::placeholder {
+  color: #FF5964;
+  padding: 0px 10px 0px 10px;
+  font-size: 20px;
+  background: transparent url(../icons/envelope-paper-heart.svg) no-repeat right 10px center;
+  background-size: 20px;
+}
+.vyhledat input:focus {
+  border: none;
+  color: #F8333C;
+  border: solid #F8333C;
 }/*# sourceMappingURL=css.css.map */
