--- a/css/css.scss
+++ b/css/css.scss
@@ -85,3 +85,56 @@ th, td {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+
+  .footer {
+    text-align: center;
+    padding: 3px;
+    color: black;
+    margin-top: 30px;
+    font-size: 10px !important;
+
+    aspect-ratio: 960/200;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  
+    background-image: url('../svg/footer.svg');
+  
+    @media screen and (max-width: 767px) {
+
+      h3{
+        font-size: 15px !important;
+        }
+  
+  }
+}
+
+.vyhledat {
+  position: relative;
+
+  input {
+    width: 100%;
+    height: 50px;
+    border: 2px solid $pink;
+    border-radius: 40px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    outline: none;
+    transition-duration: 0.1s;
+
+    &::placeholder {
+      color: $pink;
+      padding: 0px 10px 0px 10px;
+      font-size: 20px;
+      background: transparent url(../icons/envelope-paper-heart.svg) no-repeat right 10px center;
+      background-size: 20px;
+    }
+  }
+
+  input:focus {
+    border: none;
+    color: $red;
+    border: solid $red;
+  }
+}
