--- a/css/login.scss
+++ b/css/login.scss
@@ -7,6 +7,7 @@ Glyphikony jsou ze stránky: https://icons.getbootstrap.com/
 
 input{
     padding: 0.2em; 
+    padding-left: 25px;
     box-sizing: border-box;
     width: 100% 
   }
@@ -37,7 +38,6 @@ input{
 
     &::placeholder {
       color: $pink;
-      padding: 0px 10px 0px 10px;
       font-size: 20px;
       background: transparent url(../icons/person.svg) no-repeat right 10px center;
       background-size: 25px;
@@ -67,7 +67,6 @@ input{
   
       &::placeholder {
         color: $pink;
-        padding: 0px 10px 0px 10px;
         font-size: 20px;
         background: transparent url(../icons/gem.svg) no-repeat right 10px center;
         background-size: 20px;
@@ -97,7 +96,6 @@ input{
   
       &::placeholder {
         color: $pink;
-        padding: 0px 10px 0px 10px;
         font-size: 20px;
         background: transparent url(../icons/controller.svg) no-repeat right 10px center;
         background-size: 20px;
@@ -127,7 +125,6 @@ input{
   
       &::placeholder {
         color: $pink;
-        padding: 0px 10px 0px 10px;
         font-size: 20px;
         background: transparent url(../icons/lock-fill.svg) no-repeat right 10px center;
         background-size: 20px;
@@ -157,7 +154,6 @@ input{
   
       &::placeholder {
         color: $pink;
-        padding: 0px 10px 0px 10px;
         font-size: 20px;
         background: transparent url(../icons/envelope-paper-heart.svg) no-repeat right 10px center;
         background-size: 20px;
@@ -170,5 +166,34 @@ input{
       border: solid $red;
     }
   }
+
+    // ---------------------------------------- Právo ----------------------------------------
+.pravo {
+  position: relative;
+
+  input {
+    width: 100%;
+    height: 50px;
+    border: 2px solid $pink;
+    border-radius: 40px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    outline: none;
+    transition-duration: 0.1s;
+
+    &::placeholder {
+      color: $pink;
+      font-size: 20px;
+      background: transparent url(../icons/envelope-paper-heart.svg) no-repeat right 10px center;
+      background-size: 20px;
+    }
+  }
+
+  input:focus {
+    border: none;
+    color: $red;
+    border: solid $red;
+  }
+}
 
 
