--- a/css/login.scss
+++ b/css/login.scss
@@ -171,29 +171,42 @@ input{
 .pravo {
   position: relative;
 
-  input {
-    width: 100%;
-    height: 50px;
-    border: 2px solid $pink;
-    border-radius: 40px;
-    margin-bottom: 10px;
-    font-size: 20px;
-    outline: none;
-    transition-duration: 0.1s;
-
-    &::placeholder {
-      color: $pink;
-      font-size: 20px;
-      background: transparent url(../icons/envelope-paper-heart.svg) no-repeat right 10px center;
-      background-size: 20px;
-    }
-  }
-
-  input:focus {
-    border: none;
-    color: $red;
-    border: solid $red;
+  p{
+    font-size: 35px;
   }
 }
+
+select {
+  transition: border-color 0.3s ease-in-out;
+  outline: none;
+  border: 3px solid $pink;
+  border-radius: 5px;
+  height: 50px;
+  width: 400px;
+  font-size: 25px;
+
+  background-image: linear-gradient($pink 1% , $yellow);
+  margin-bottom: 10px;
+
+  @media screen and (max-width: 1000px) {
+    width: 300px;
+  }
+
+  @media screen and (max-width: 767px) {
+    width: 200px;
+  }
+  
+  &:hover{
+    cursor: pointer;
+  }
+
+  &:focus {
+    background-color: #f8f8f8;
+    background-image: linear-gradient($yellow 1% , $pink);
+    border-color: $yellow;
+  }
+}
+
+
 
 
