--- a/css/css.scss
+++ b/css/css.scss
@@ -85,16 +85,17 @@ th, td {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
-
+// ------------------------ FOOTER ------------------------
   .footer {
     text-align: center;
-    position: fixed;
+    position: absolute;
     padding: 80px;
     color: black;
     margin-top: 30px;
     font-size: 1px !important;
     aspect-ratio: 960/200;
     width: 100%;
+
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
