--- a/css/css.css
+++ b/css/css.css
@@ -15,7 +15,7 @@ html {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: url("../svg/hero.svg");
+  background-image: url("../img/svg/hero.svg");
 }
 
 .jumbotron {
@@ -87,17 +87,18 @@ th, td {
 
 .footer {
   text-align: center;
-  position: fixed;
+  position: absolute;
   padding: 80px;
   color: black;
-  margin-top: 30px;
+  margin-top: 300px;
   font-size: 1px !important;
   aspect-ratio: 960/200;
   width: 100%;
+  max-height: 300px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: url("../svg/footer2.svg");
+  background-image: url("../img/svg/footer2.svg");
 }
 .footer h3 {
   font-size: 15px !important;
@@ -130,14 +131,14 @@ th, td {
   color: #FF5964;
   padding: 0px 10px 0px 10px;
   font-size: 20px;
-  background: transparent url(../icons/envelope-paper-heart.svg) no-repeat right 10px center;
+  background: transparent url(../img/icons/envelope-paper-heart.svg) no-repeat right 10px center;
   background-size: 20px;
 }
 .vyhledat input::placeholder {
   color: #FF5964;
   padding: 0px 10px 0px 10px;
   font-size: 20px;
-  background: transparent url(../icons/envelope-paper-heart.svg) no-repeat right 10px center;
+  background: transparent url(../img/icons/envelope-paper-heart.svg) no-repeat right 10px center;
   background-size: 20px;
 }
 .vyhledat input:focus {
