--- a/css/css.scss
+++ b/css/css.scss
@@ -14,7 +14,7 @@ html {
     background-position: center;
     background-size: cover;
 
-    background-image: url('../svg/hero.svg');
+    background-image: url('../img/svg/hero.svg');
 
 }
 
@@ -91,16 +91,17 @@ th, td {
     position: absolute;
     padding: 80px;
     color: black;
-    margin-top: 30px;
+    margin-top: 300px;
     font-size: 1px !important;
     aspect-ratio: 960/200;
     width: 100%;
+    max-height: 300px;
 
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
   
-    background-image: url('../svg/footer2.svg');
+    background-image: url('../img/svg/footer2.svg');
 
     h3{
       font-size: 15px !important;
@@ -112,6 +113,8 @@ th, td {
         }
   }
 }
+
+// ------------------------ konec FOOTER ------------------------
 
 .fixed-bottom{
   padding-bottom: 0px;
@@ -134,7 +137,7 @@ th, td {
       color: $pink;
       padding: 0px 10px 0px 10px;
       font-size: 20px;
-      background: transparent url(../icons/envelope-paper-heart.svg) no-repeat right 10px center;
+      background: transparent url(../img/icons/envelope-paper-heart.svg) no-repeat right 10px center;
       background-size: 20px;
     }
   }
