--- a/css/games.scss
+++ b/css/games.scss
@@ -1,42 +1,11 @@
-.jumbotron {
-    background-color: #f4511e;
-    color: #fff;
-    padding: 100px 25px;
+/* Import proměnných
+*/
+@import 'variables';
+
+  .col-sm-4, .col-xs-12 {
+    padding: 20px 10px;
   }
-  .container-fluid {
-    padding: 60px 50px;
-  }
-  .bg-grey {
-    background-color: #f6f6f6;
-  }
-  .logo-small {
-    color: #f4511e;
-    font-size: 50px;
-  }
-  .logo {
-    color: #f4511e;
-    font-size: 200px;
-  }
-  .thumbnail {
-    padding: 0 0 15px 0;
-    border: none;
-    border-radius: 0;
-  }
-  .thumbnail img {
-    width: 100%;
-    height: 100%;
-    margin-bottom: 10px;
-  }
-  .carousel-control.right, .carousel-control.left {
-    background-image: none;
-    color: #f4511e;
-  }
-  .carousel-indicators li {
-    border-color: #f4511e;
-  }
-  .carousel-indicators li.active {
-    background-color: #f4511e;
-  }
+
   .item h4 {
     font-size: 19px;
     line-height: 1.375em;
@@ -44,50 +13,70 @@
     font-style: italic;
     margin: 70px 0;
   }
-  .item span {
-    font-style: normal;
-  }
+
   .panel {
-    border: 1px solid #f4511e; 
+    border: 1px solid $orange; 
     border-radius:0 !important;
-    transition: box-shadow 0.5s;
+    filter: grayscale(100%);
+    transition: filter 0.3s ease-in-out; 
+    text-align: center;
+    display: block;
+    background-color: white;
+
+      &:hover{
+        border: 1px solid $orange; 
+        transition: box-shadow 0.3s;
+        filter: grayscale(0%);
+        transition: filter 0.3s ease-in-out; 
+        box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+        transition: box-shadow 0.3s;
+
+          h1{
+          color: white;   
+        
+          text-shadow:
+          -1px -1px 0 #000,
+           1px -1px 0 #000,
+          -1px  1px 0 #000,
+           1px  1px 0 #000;
+        }
+    }
   }
-  .panel:hover {
-    box-shadow: 5px 0px 40px rgba(0,0,0, .2);
-  }
-  .panel-footer .btn:hover {
-    border: 1px solid #f4511e;
-    background-color: #fff !important;
-    color: #f4511e;
-  }
+
+
   .panel-heading {
-    color: #fff !important;
-    background-color: #f4511e !important;
+    background-color: $red;
     padding: 25px;
     border-bottom: 1px solid transparent;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
+    height: 200px;
+    color: white !important; 
+
+    background-size: cover;
+
+    background-image: url(../img/svg/game-panel.svg);
+    background-repeat: repeat;
+
   }
-  .panel-footer {
-    background-color: white !important;
+
+  .panel-body{
+    padding: 5px;
+    height: 200px;
+    contain: paint;
+    overflow: auto; /* Přidáváme overflow pro scrolování */
   }
-  .panel-footer h3 {
-    font-size: 32px;
-  }
-  .panel-footer h4 {
-    color: #aaa;
-    font-size: 14px;
-  }
-  .panel-footer .btn {
-    margin: 15px 0;
-    background-color: #f4511e;
-    color: #fff;
-  }
+
+
   @media screen and (max-width: 768px) {
     .col-sm-4 {
       text-align: center;
       margin: 25px 0;
+
+      .panel-body {
+        height: 210px;
+      }
     }
   }
