--- a/css/login.scss
+++ b/css/login.scss
@@ -22,6 +22,10 @@ input{
 
   }
 
+  .parametry{
+    font-size: 20px;
+  }
+
   // ---------------------------------------- User ----------------------------------------
   .jmeno {
   position: relative;
