--- a/css/games.css
+++ b/css/games.css
@@ -3,9 +3,12 @@
 */
 /*
 Moje paleta barev:
+
+Glyphikony jsou ze stránky: https://icons.getbootstrap.com/
 */
-.col-sm-4, .col-xs-12 {
+.col-sm-4, .col-sm-8, .col-xs-12 {
   padding: 20px 10px;
+  padding-left: 50px;
 }
 
 .item h4 {
