--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -58,6 +58,16 @@
     border-radius: 4px;
 }
 
+@media (min-width: 768px){
+  .navbar-nav {
+    li {
+      a {
+        padding-top: 20px;
+        padding-bottom: 20px;
+      } 
+    }
+  }
+}
 
 // -------------------- DROPDOWN MENU V NAVBARU
 .dropdown-menu{
