--- a/css/css.scss
+++ b/css/css.scss
@@ -98,6 +98,10 @@ th, td {
   .glyphicon-tower{
     padding-top: 15px;
   }
+
+  .glyph-hod{
+    background-image: linear-gradient($orange 25% , $red) !important;
+  }
 // ------------------------ FOOTER ------------------------
   .footer {
     text-align: center;
