--- a/css/css.css
+++ b/css/css.css
@@ -100,6 +100,10 @@ th, td {
   padding-top: 15px;
 }
 
+.glyph-hod {
+  background-image: linear-gradient(#F26419 25%, #F8333C) !important;
+}
+
 .footer {
   text-align: center;
   position: absolute;
