--- a/css/games.css
+++ b/css/games.css
@@ -63,6 +63,44 @@ Glyphikony jsou ze stránky: https://icons.getbootstrap.com/
   overflow: auto; /* Přidáváme overflow pro scrolování */
 }
 
+textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  font-size: 16px;
+  resize: none;
+}
+
+.hodnoceni {
+  display: flex;
+  align-items: center;
+}
+.hodnoceni input {
+  display: none;
+}
+.hodnoceni input + label {
+  font-size: 50px;
+  cursor: pointer;
+  text-shadow: 5px 0px 40px rgba(0, 0, 0, 0.5);
+}
+.hodnoceni input:checked + label ~ label {
+  /*
+  Zde je to trošku těžší tak vysvětlim jak to funguje:
+
+  input:checked + label ~ label vybere všechny následující <label>, 
+  které jdou po zaškrtnutém <input> (a jsou tedy sourozenci začátečního <input>).
+  */
+  background-image: linear-gradient(lightgray 25%, white) !important;
+}
+.hodnoceni label:active {
+  transform: scale(0.8);
+  transition: 0.3s ease;
+}
+
 @media screen and (max-width: 768px) {
   .col-sm-4 {
     text-align: center;
