--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -56,6 +56,7 @@
     background-image: none;
     border: 1px solid transparent;
     border-radius: 4px;
+    justify-content: center;
 }
 
 @media (min-width: 768px){
