--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -90,3 +90,16 @@
     size: 30px;
 }
 
+
+ /* -------------------------------  TABS ------------------------------- */
+
+ .nav, .nav-tabs{
+  font-family: 'VT323', monospace;
+  font-size: 20px;
+
+
+  a{
+    color:red;
+  }
+ }
+
