--- a/css/login.css
+++ b/css/login.css
@@ -23,6 +23,12 @@ input {
   border-radius: 10px;
   box-shadow: 5px 0px 40px rgba(0, 0, 0, 0.5);
   background-image: linear-gradient(#FF5964 25%, #FFE74C);
+  overflow: hidden;
+}
+@media (max-width: 993px) and (min-width: 769px) {
+  .login {
+    width: 95%;
+  }
 }
 
 .parametry {
