--- a/css/login.scss
+++ b/css/login.scss
@@ -9,7 +9,7 @@ input{
     padding: 0.2em; 
     padding-left: 25px;
     box-sizing: border-box;
-    width: 100% 
+    width: 100%;
   }
 
   .login{
@@ -19,6 +19,14 @@ input{
     border-radius: 10px;
     box-shadow: 5px 0px 40px rgba(0,0,0, .5);
     background-image: linear-gradient($pink 25% , $yellow);
+    overflow: hidden;
+
+
+
+    @media (max-width: 993px) and (min-width: 769px) {
+      width: 95%;
+  }
+
 
   }
 
